Enable GenerationalZGC and SoftMaxHeapSize=512m. close #2214